--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                   <a class="nav-link disabled">Disabled</a>
                 </li>
               </ul>
+              <img src="./images/image1.jpg" alt="">
         </div>
       </nav>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
